# token-faucet

./: Anchor.toml  README.md  package.json  test-validator.sh
programs/token-faucet/: Cargo.toml
programs/token-faucet/src/: error.rs  event.rs  lib.rs  state.rs
programs/token-faucet/src/instructions/: close.rs  edit_config.rs  initialize.rs  mint.rs  mod.rs
tests/: constants.ts  helper.ts  test.ts
tests/lib/metadata/: mockSOL.json  mockUSDC.json
tests/token/: edit-config.ts  initialize-token.ts  token-limiter.ts
tests/user/: close-user.ts  initialize-user.ts  mint.ts
